--- a/public/landing.html
+++ b/public/landing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Plataforma Inteligente</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: 'Inter', sans-serif; min-height: 100vh; color: #ffffff; background: linear-gradient(135deg,#0a0a0f,#0f0c2d); display:flex; flex-direction:column; overflow-x:hidden; }
@@ -13,10 +13,28 @@
     .login-btn { text-decoration:none; background:linear-gradient(90deg,#8b5cf6,#3b82f6); padding:0.6rem 1.2rem; border-radius:8px; color:#fff; font-weight:600; transition:transform .2s, box-shadow .2s; box-shadow:0 4px 15px rgba(59,130,246,0.3); }
     .login-btn:hover { transform:translateY(-2px); box-shadow:0 8px 20px rgba(147,51,234,0.5); }
     .hero { flex:1; display:flex; align-items:center; justify-content:center; text-align:center; padding:2rem 1rem; position:relative; }
-    .hero::before { content:''; position:absolute; inset:0; background:url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat; opacity:0.25; filter:grayscale(20%); z-index:-2; }
+    .hero::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background:
+        url('https://images.unsplash.com/photo-1581093588401-2cdb347b03ab?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat,
+        url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+      opacity: 0.25;
+      filter: grayscale(20%);
+      z-index: -2;
+    }
     .hero::after { content:''; position:absolute; inset:0; background:linear-gradient(135deg,rgba(24,0,36,0.7),rgba(48,0,48,0.8)); z-index:-1; }
     .hero-content { max-width:800px; margin:auto; }
-    h1 { font-family:'Space Grotesk',sans-serif; font-size:2.5rem; margin-bottom:1rem; }
+    h1 {
+      font-family: 'Poppins', sans-serif;
+      font-size: 3rem;
+      text-transform: uppercase;
+      background: linear-gradient(90deg, #8b5cf6, #3b82f6);
+      -webkit-background-clip: text;
+      color: transparent;
+      margin-bottom: 1rem;
+    }
     .intro-img { width:80%; max-width:360px; border-radius:20px; box-shadow:0 8px 20px rgba(0,0,0,0.5); margin:1.5rem auto; }
     p.description { line-height:1.6; font-size:1.1rem; color:rgba(255,255,255,0.9); margin-bottom:1.5rem; }
     .cta { margin-top:1.5rem; display:flex; gap:1rem; justify-content:center; flex-wrap:wrap; }
@@ -42,7 +60,6 @@
       <p class="description">O que é o Prod.AI? O prod.ai é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais. Usando inteligência artificial, ele te ajuda a tirar dúvidas, resolver problemas técnicos, aprender novas técnicas e encontrar soluções rápidas para tudo o que envolve produzir música. Seja você iniciante ou experiente, o prod.ai está aqui pra acelerar seu fluxo criativo e facilitar sua vida no estúdio.</p>
       <h2 style="margin-bottom:1rem; font-family:'Space Grotesk',sans-serif;">Bora liberar todo seu potencial?</h2>
       <div class="cta">
-        <a href="login.html" class="btn">Entrar ou Cadastrar</a>
         <a href="login.html" class="btn">Começar Agora</a>
       </div>
     </div>
