--- a/public/landing.html
+++ b/public/landing.html
@@ -40,6 +40,11 @@
     .cta { margin-top:1.5rem; display:flex; gap:1rem; justify-content:center; flex-wrap:wrap; }
     .btn { background:linear-gradient(90deg,#8b5cf6,#3b82f6); color:#fff; padding:0.9rem 2rem; border-radius:12px; text-decoration:none; font-weight:600; transition:transform .2s, box-shadow .2s; box-shadow:0 5px 20px rgba(59,130,246,0.3); }
     .btn:hover { transform:translateY(-2px); box-shadow:0 8px 30px rgba(59,130,246,0.5); }
+    .features { display:flex; gap:1.5rem; justify-content:center; flex-wrap:wrap; margin-top:2rem; }
+    .feature { background:rgba(255,255,255,0.05); padding:1rem; border-radius:12px; backdrop-filter:blur(2px); box-shadow:0 4px 12px rgba(0,0,0,0.4); text-align:center; flex:1 1 220px; max-width:250px; }
+    .feature img { width:60px; margin-bottom:.5rem; }
+    .feature h3 { font-family:'Poppins',sans-serif; font-size:1.25rem; margin-bottom:.5rem; }
+    .feature p { font-size:.95rem; color:rgba(255,255,255,0.85); }
     .particles { position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:1; background-image: radial-gradient(2px 2px at 20px 30px, rgba(147,51,234,0.3), transparent), radial-gradient(2px 2px at 40px 70px, rgba(59,130,246,0.3), transparent), radial-gradient(1px 1px at 90px 40px, rgba(236,72,153,0.3), transparent), radial-gradient(1px 1px at 130px 80px, rgba(147,51,234,0.3), transparent), radial-gradient(2px 2px at 160px 30px, rgba(59,130,246,0.3), transparent); background-repeat:repeat; background-size:200px 100px; animation:particlesMove 20s linear infinite; }
     @keyframes particlesMove { 0% { transform:translate(0,0); } 100% { transform:translate(-200px,-100px); } }
     .fade { opacity:0; transform:translateY(20px); transition:opacity .8s ease, transform .8s ease; }
@@ -52,6 +57,8 @@
       .login-btn { font-size:.9rem; padding:.5rem 1rem; }
       .cta { flex-direction:column; gap:.75rem; }
       .hero-content { padding-top:3rem; }
+      .features { flex-direction:column; align-items:center; }
+      .feature { max-width:300px; }
     }
     @media(max-width:480px){
       h1 { font-size:1.5rem; }
@@ -59,6 +66,13 @@
       .logo{ font-size:1.25rem; }
       .login-btn{ font-size:.8rem; padding:.4rem .8rem; }
       .cta{ gap:.5rem; }
+      .feature h3{ font-size:1.1rem; }
+      .feature p{ font-size:.9rem; }
+    }
+    @media(max-width:320px){
+      h1{ font-size:1.25rem; }
+      .login-btn{ padding:.35rem .7rem; font-size:.75rem; }
+      .btn{ padding:.7rem 1.5rem; font-size:.85rem; }
     }
   </style>
 </head>
@@ -77,6 +91,24 @@
       <div class="cta">
         <a href="login.html" class="btn">Começar Agora</a>
       </div>
+    </div>
+  </section>
+
+  <section class="features">
+    <div class="feature">
+      <img src="https://img.icons8.com/fluency/96/robot-2.png" alt="Assistente" />
+      <h3>Assistente Inteligente</h3>
+      <p>Respostas rápidas para suas dúvidas de produção musical.</p>
+    </div>
+    <div class="feature">
+      <img src="https://img.icons8.com/fluency/96/learning.png" alt="Aprendizado" />
+      <h3>Aprendizado Contínuo</h3>
+      <p>Dicas personalizadas e tutoriais sempre à mão.</p>
+    </div>
+    <div class="feature">
+      <img src="https://img.icons8.com/fluency/96/rocket.png" alt="Fluxo" />
+      <h3>Fluxo Otimizado</h3>
+      <p>Acelere seu processo criativo e economize tempo.</p>
     </div>
   </section>
   <script>
