--- a/public/landing.html
+++ b/public/landing.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Inter', sans-serif; min-height: 100vh; color: #ffffff; background: linear-gradient(135deg,#0a0a0f,#0f0c2d); display:flex; flex-direction:column; overflow-x:hidden; }
+    body { font-family: 'Inter', sans-serif; min-height: 100vh; color: #ffffff; background: linear-gradient(135deg, #0a0a0a 0%, #1a0a2e 25%, #16213e 50%, #0a0a0a 100%); display:flex; flex-direction:column; overflow-x:hidden; }
     header { position:absolute; top:0; left:0; width:100%; padding:1rem 2rem; display:flex; justify-content:space-between; align-items:center; z-index:10; }
     .logo { font-family:'Space Grotesk',sans-serif; font-size:1.75rem; font-weight:700; background:linear-gradient(90deg,#7e22ce,#2563eb); -webkit-background-clip:text; color:transparent; text-shadow:0 2px 10px rgba(0,0,0,0.5); }
     .login-btn { text-decoration:none; background:linear-gradient(90deg,#8b5cf6,#3b82f6); padding:0.6rem 1.2rem; border-radius:8px; color:#fff; font-weight:600; transition:transform .2s, box-shadow .2s; box-shadow:0 4px 15px rgba(59,130,246,0.3); }
@@ -18,9 +18,13 @@
       position: absolute;
       inset: 0;
       background:
-        url('https://images.unsplash.com/photo-1581093588401-2cdb347b03ab?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat,
-        url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
-      opacity: 0.25;
+        linear-gradient(to right, rgba(10,10,25,0.85), rgba(10,10,25,0.25) 50%, rgba(10,10,25,0.85)),
+        url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?auto=format&fit=crop&w=1350&q=80') left center/cover no-repeat,
+        url('https://images.unsplash.com/photo-1581093588401-2cdb347b03ab?auto=format&fit=crop&w=1350&q=80') right center/cover no-repeat;
+      background-size: cover, 60% 100%, 60% 100%;
+      background-position: center, left center, right center;
+      background-repeat: no-repeat;
+      opacity: 0.35;
       filter: grayscale(20%);
       z-index: -2;
     }
@@ -71,11 +75,10 @@
   <section class="hero">
     <div class="hero-content fade" id="content">
       <h1>Bem-vindo ao futuro da produção musical</h1>
-      <img src="https://images.unsplash.com/photo-1581093588401-2cdb347b03ab?auto=format&fit=crop&w=800&q=80" alt="Robô com fone de ouvido" class="intro-img">
       <p class="description">O que é o Prod.AI? O prod.ai é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais. Usando inteligência artificial, ele te ajuda a tirar dúvidas, resolver problemas técnicos, aprender novas técnicas e encontrar soluções rápidas para tudo o que envolve produzir música. Seja você iniciante ou experiente, o prod.ai está aqui pra acelerar seu fluxo criativo e facilitar sua vida no estúdio.</p>
       <h2 style="margin-bottom:1rem; font-family:'Space Grotesk',sans-serif;">Bora liberar todo seu potencial?</h2>
       <div class="cta">
-        <a href="login.html" class="btn">Começar Agora</a>
+        <a href="login.html" class="btn">Experimente gratuitamente</a>
       </div>
     </div>
   </section>
