Centraliza botão Próximo na entrevista

--- a/public/entrevista.html
+++ b/public/entrevista.html
@@ -45,6 +45,8 @@
       box-shadow: 0 0 10px rgba(159,0,255,0.6);
       cursor: pointer;
       transition: transform .2s, box-shadow .2s;
+      display: block;
+      margin: 1rem auto 0;
     }
     .btn-next:hover {
       transform: scale(1.05);
