--- a/public/landing.html
+++ b/public/landing.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Plataforma Inteligente</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;600;700&family=Poppins:wght@400;600;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p1U6ywQjH+5nLrryG5kyRjO6jwxKF1u9IiMaivGi99Z+eKCbFf8HgnbZQzQ0jrOqibGDSh2WMBTj8lNKN7g96g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Inter', sans-serif; min-height: 100vh; color: #ffffff; background: linear-gradient(135deg, #050509 0%, #120a2b 50%, #050509 100%); display:flex; flex-direction:column; overflow-x:hidden; }
+    body { font-family: 'Inter', sans-serif; min-height: 100vh; color: #ffffff; background: linear-gradient(135deg, #0a0020 0%, #120a2b 50%, #0a0020 100%); display:flex; flex-direction:column; overflow-x:hidden; }
     header { position:absolute; top:0; left:0; width:100%; padding:1rem 2rem; display:flex; justify-content:space-between; align-items:center; z-index:10; }
     .logo { font-family:'Space Grotesk',sans-serif; font-size:1.75rem; font-weight:700; background:linear-gradient(90deg,#7e22ce,#2563eb); -webkit-background-clip:text; color:transparent; text-shadow:0 2px 10px rgba(0,0,0,0.5); }
     .login-btn { text-decoration:none; background:linear-gradient(to right,#9a00ff,#5f00ff); padding:0.6rem 1.2rem; border-radius:8px; color:#fff; font-weight:600; transition:transform .2s, box-shadow .2s; box-shadow:0 4px 15px rgba(95,0,255,0.3); }
@@ -18,9 +19,9 @@
       position: absolute;
       inset: 0;
       background:
-        linear-gradient(75deg, rgba(5,5,15,0.85), rgba(5,5,15,0.3) 50%, rgba(5,5,15,0.85)),
-        url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?auto=format&fit=crop&w=1350&q=80') left center/cover no-repeat,
-        url('https://images.unsplash.com/photo-1531379410501-662b1c82ad38?auto=format&fit=crop&w=1350&q=80') right center/cover no-repeat;
+        linear-gradient(75deg, rgba(5,5,20,0.85), rgba(5,5,20,0.3) 50%, rgba(5,5,20,0.85)),
+        url('https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=1350&q=80') left center/cover no-repeat,
+        url('https://images.unsplash.com/photo-1508672019048-805c876b67e2?auto=format&fit=crop&w=1350&q=80') right center/cover no-repeat;
       background-size: cover, 55% 100%, 55% 100%;
       background-position: center, left center, right center;
       background-repeat: no-repeat;
@@ -28,10 +29,10 @@
       filter: grayscale(10%);
       z-index: -2;
     }
-    .hero::after { content:''; position:absolute; inset:0; background:linear-gradient(135deg,rgba(20,0,40,0.8),rgba(40,0,60,0.8)); z-index:-1; }
+    .hero::after { content:''; position:absolute; inset:0; background:linear-gradient(135deg,rgba(20,0,60,0.8),rgba(40,0,80,0.8)); z-index:-1; }
     .hero-content { max-width:800px; margin:auto; }
     h1 {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
       text-transform: uppercase;
       background: linear-gradient(90deg, #8b5cf6, #3b82f6);
@@ -41,6 +42,8 @@
     }
     .intro-img { width:80%; max-width:360px; border-radius:20px; box-shadow:0 8px 20px rgba(0,0,0,0.5); margin:1.5rem auto; }
     p.description { line-height:1.6; font-size:1.1rem; color:rgba(255,255,255,0.9); margin-bottom:1.5rem; }
+    .icon-row { display:flex; justify-content:center; gap:1rem; margin:1rem 0; }
+    .icon-row i { font-size:2rem; color:#f472b6; text-shadow:0 0 10px rgba(244,114,182,0.8); }
     .cta { margin-top:1.5rem; display:flex; gap:1rem; justify-content:center; flex-wrap:wrap; }
     .btn { background:linear-gradient(to right,#9a00ff,#5f00ff); color:#fff; padding:0.9rem 2rem; border-radius:12px; text-decoration:none; font-weight:600; transition:transform .2s, box-shadow .2s; box-shadow:0 5px 20px rgba(95,0,255,0.3); }
     .btn:hover { transform:translateY(-2px); box-shadow:0 8px 30px rgba(95,0,255,0.5); }
@@ -51,6 +54,7 @@
     @media(max-width:768px){
       h1 { font-size:2rem; }
       .intro-img{ max-width:280px; }
+      .icon-row i{ font-size:1.5rem; }
       header { flex-direction:column; align-items:center; padding:1rem; }
       .logo { font-size:1.5rem; margin-bottom:.75rem; }
       .login-btn { font-size:.9rem; padding:.5rem 1rem; }
@@ -63,6 +67,7 @@
       .logo{ font-size:1.25rem; }
       .login-btn{ font-size:.8rem; padding:.4rem .8rem; }
       .cta{ gap:.5rem; }
+      .icon-row i{ font-size:1.2rem; }
     }
   </style>
 </head>
@@ -75,7 +80,14 @@
   <section class="hero">
     <div class="hero-content fade" id="content">
       <h1>Bem-vindo ao futuro da produção musical</h1>
+      <img class="intro-img" src="https://images.unsplash.com/photo-1508672019048-805c876b67e2?auto=format&fit=crop&w=800&q=80" alt="Robô com rede neural" />
       <p class="description">O que é o Prod.AI? O prod.ai é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais. Usando inteligência artificial, ele te ajuda a tirar dúvidas, resolver problemas técnicos, aprender novas técnicas e encontrar soluções rápidas para tudo o que envolve produzir música. Seja você iniciante ou experiente, o prod.ai está aqui pra acelerar seu fluxo criativo e facilitar sua vida no estúdio.</p>
+      <div class="icon-row">
+        <i class="fas fa-robot"></i>
+        <i class="fas fa-microchip"></i>
+        <i class="fas fa-headphones"></i>
+        <i class="fas fa-music"></i>
+      </div>
       <h2 style="margin-bottom:1rem; font-family:'Space Grotesk',sans-serif;">Bora liberar todo seu potencial?</h2>
       <div class="cta">
         <a href="login.html" class="btn">Experimente gratuitamente</a>
