--- a/public/landing.html
+++ b/public/landing.html
@@ -580,8 +580,8 @@
         <nav>
             <div class="logo">PROD.AI</div>
             <div class="auth-buttons">
-                <a href="#login" class="btn-login">LOGIN</a>
-                <a href="#cadastrar" class="btn-signup">CADASTRAR</a>
+                <a href="login.html" class="btn-login">LOGIN</a>
+                <a href="login.html" class="btn-signup">CADASTRAR</a>
             </div>
         </nav>
     </header>
@@ -596,7 +596,7 @@
                 Prod.AI é uma plataforma inteligente que usa inteligência artificial para impulsionar a produtividade de produtores musicais. Usando inteligência artificial, ele te ajuda a tirar dúvidas, resolver problemas técnicos, aprender novas técnicas e encontrar soluções rápidas para tudo o que envolve produzir música.
             </p>
             
-            <a href="#experimente" class="cta-button">EXPERIMENTE GRATUITAMENTE</a>
+            <a href="login.html" class="cta-button">EXPERIMENTE GRATUITAMENTE</a>
         </section>
 
         <!-- Features Cards -->
