--- a/public/landing.html
+++ b/public/landing.html
@@ -19,8 +19,8 @@
             --electric-blue: #0080ff;
             --plasma-pink: #ff0080;
             --dark-bg: #0a0a0f;
-            --glass-bg: rgba(255, 255, 255, 0.05);
-            --text-primary: #ffffff;
+            --glfass-bg: rgba(255, 255, 255, 0.05);
+            --text-primary: #ffffff;f
             --text-secondary: #a0a0ff;
         }
         
