--- a/public/landing.html
+++ b/public/landing.html
@@ -682,11 +682,11 @@
                 <div class="neumo-label">Satisfação</div>
             </div>
             <div class="neumo-box scroll-reveal">
-                <div class="neumo-number">1s</div>
+                <div class="neumo-number">1S</div>
                 <div class="neumo-label">Resposta Média</div>
             </div>
             <div class="neumo-box scroll-reveal">
-                <div class="neumo-number">24/7</div>
+                H<div class="neumo-number">24H</div>
                 <div class="neumo-label">Suporte</div>
             </div>
             <div class="neumo-box scroll-reveal">
@@ -711,7 +711,7 @@
     
     <!-- Footer -->
     <footer>
-        <p class="footer-text">© 2025 PROD.AI - PRODUÇÃO MUSICAL INTELIGENTE</p>
+        <p class="footer-text">© 2025 PROD.AI - Todos os direitos reservados.</p>
     </footer>
     
     <script>
