--- a/public/entrevista-final.html
+++ b/public/entrevista-final.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Perfil Concluído – Prod.AI</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="futuristic.css" />
   <style>
     .final-container {
       max-width: 500px;
@@ -25,7 +25,10 @@
   </style>
 </head>
 <body>
-  <div class="particles"></div>
+  <div class="background-container">
+    <div class="grid-lines"></div>
+    <div class="particles" id="particles"></div>
+  </div>
   <div class="final-container fade-in">
     <h1 class="logo" style="margin-bottom:0.5rem;">Perfil técnico concluído!</h1>
     <p class="subtitle" style="margin-bottom:1.5rem;">Quer respostas personalizadas para o seu nível, estilo e DAW?</p>
@@ -36,10 +39,24 @@
       <li>Respostas mais avançadas</li>
       <li>Prioridade no servidor</li>
     </ul>
-    <div class="btn-group">
-      <a href="planos.html" class="btn-plus" id="assinarBtn">Assinar o Plano Plus</a>
-      <a href="index.html" class="btn-plus" style="background:#444;">Continuar sem assinar</a>
-    </div>
+  <div class="btn-group">
+    <a href="planos.html" class="btn-plus" id="assinarBtn">Assinar o Plano Plus</a>
+    <a href="index.html" class="btn-plus" style="background:#444;">Continuar sem assinar</a>
   </div>
+  </div>
+  <script>
+    const particlesContainer = document.getElementById('particles');
+    if (particlesContainer) {
+      const particleCount = 50;
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 10 + 's';
+        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        particlesContainer.appendChild(particle);
+      }
+    }
+  </script>
 </body>
 </html>
