--- a/public/entrevista.html
+++ b/public/entrevista.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Entrevista – Prod.AI</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="futuristic.css" />
   <style>
     .interview-container {
       max-width: 500px;
@@ -59,7 +59,10 @@
   <script src="entrevista.js" defer></script>
 </head>
 <body>
-  <div class="particles"></div>
+  <div class="background-container">
+    <div class="grid-lines"></div>
+    <div class="particles" id="particles"></div>
+  </div>
   <div class="interview-container fade-in" id="interviewContainer">
     <h1 class="logo" style="margin-bottom:0.5rem;">Prod.AI</h1>
     <p class="subtitle" style="margin-bottom:2rem;">Queremos te conhecer melhor para personalizar suas respostas!</p>
@@ -67,5 +70,19 @@
     <div id="inputArea"></div>
     <button id="nextBtn" class="btn-next">Próximo</button>
   </div>
+  <script>
+    const particlesContainer = document.getElementById('particles');
+    if (particlesContainer) {
+      const particleCount = 50;
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 10 + 's';
+        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        particlesContainer.appendChild(particle);
+      }
+    }
+  </script>
 </body>
 </html>
