--- a/public/obrigado.html
+++ b/public/obrigado.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Obrigado pela Assinatura | Prod.AI Plus</title>
   <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="futuristic.css"/>
   <style>
     /* Ajustes específicos para a página de agradecimento */
     .container {
@@ -26,7 +26,10 @@
   </style>
 </head>
 <body>
-  <div class="particles"></div>
+  <div class="background-container">
+    <div class="grid-lines"></div>
+    <div class="particles" id="particles"></div>
+  </div>
 
   <div class="container fade-in">
     <header class="header">
@@ -55,5 +58,19 @@
 
   <!-- Se o seu chat usa script.js para inicializar e detectar isPlus, mantenha a importação -->
   <script src="script.js"></script>
+  <script>
+    const particlesContainer = document.getElementById('particles');
+    if (particlesContainer) {
+      const particleCount = 50;
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 10 + 's';
+        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        particlesContainer.appendChild(particle);
+      }
+    }
+  </script>
 </body>
 </html>
