--- a/public/planos.html
+++ b/public/planos.html
@@ -6,6 +6,7 @@
   <title>Planos – Prod.AI</title>
   <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="futuristic.css" />
   <style>
     /* RESET */
     *, *::before, *::after { margin:0; padding:0; box-sizing:border-box; }
@@ -208,6 +209,10 @@
   </style>
 </head>
 <body>
+  <div class="background-container">
+    <div class="grid-lines"></div>
+    <div class="particles" id="particles"></div>
+  </div>
   <div class="container">
     <h1>Escolha seu plano</h1>
     <p class="subtitle">Desbloqueie todo o potencial da sua produção musical</p>
@@ -240,5 +245,19 @@
       </div>
     </div>
   </div>
+  <script>
+    const particlesContainer = document.getElementById('particles');
+    if (particlesContainer) {
+      const particleCount = 50;
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 10 + 's';
+        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        particlesContainer.appendChild(particle);
+      }
+    }
+  </script>
 </body>
 </html>
