--- a/public/reset.html
+++ b/public/reset.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Redefinir Senha – Prod.AI</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="futuristic.css" />
   <style>
     body {
       background: linear-gradient(135deg, #0a0a0a 0%, #1a0a2e 25%, #16213e 50%, #0a0a0a 100%);
@@ -101,6 +102,10 @@
   </style>
 </head>
 <body>
+  <div class="background-container">
+    <div class="grid-lines"></div>
+    <div class="particles" id="particles"></div>
+  </div>
   <div class="reset-container">
     <div class="reset-logo">Prod.AI</div>
     <div class="reset-title">Redefinir sua senha</div>
@@ -163,6 +168,20 @@
         setTimeout(() => { window.location.href = "login.html"; }, 2000);
       } catch (err) {
         showError('Erro ao redefinir senha: ' + (err.message || 'Tente novamente.'));
+      }
+    }
+  </script>
+  <script>
+    const particlesContainer = document.getElementById('particles');
+    if (particlesContainer) {
+      const particleCount = 50;
+      for (let i = 0; i < particleCount; i++) {
+        const particle = document.createElement('div');
+        particle.className = 'particle';
+        particle.style.left = Math.random() * 100 + '%';
+        particle.style.animationDelay = Math.random() * 10 + 's';
+        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+        particlesContainer.appendChild(particle);
       }
     }
   </script>
