--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI - Mentor Virtual</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="futuristic.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
     body.loading {
       visibility: hidden;
+    }
+
+    .logo {
+      font-family: 'Orbitron', monospace;
+      font-size: 2.5rem;
+      font-weight: 900;
+      background: linear-gradient(45deg, #00ffff, #ff00ff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 30px rgba(0, 255, 255, 0.5);
+      animation: logo-pulse 2s ease-in-out infinite;
+    }
+
+    @keyframes logo-pulse {
+      0%, 100% { filter: brightness(1); }
+      50% { filter: brightness(1.2); }
     }
   </style>
  <script>
@@ -31,10 +49,7 @@
 </head>
 
 <body>
-  <div class="background-container">
-    <div class="grid-lines"></div>
-    <div class="particles" id="particles"></div>
-  </div>
+  <div class="particles"></div>
 
   <div class="container fade-in">
     <!-- TELA INICIAL -->
@@ -123,20 +138,6 @@
         });
       }
     });
-  </script>
-  <script>
-    const particlesContainer = document.getElementById('particles');
-    if (particlesContainer) {
-      const particleCount = 50;
-      for (let i = 0; i < particleCount; i++) {
-        const particle = document.createElement('div');
-        particle.className = 'particle';
-        particle.style.left = Math.random() * 100 + '%';
-        particle.style.animationDelay = Math.random() * 10 + 's';
-        particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
-        particlesContainer.appendChild(particle);
-      }
-    }
   </script>
 </body>
 </html>
