Revert neon styles and highlight profile

--- a/public/planos.html
+++ b/public/planos.html
@@ -208,6 +208,7 @@
   </style>
 </head>
 <body>
+  <div class="particles"></div>
   <div class="container">
     <h1>Escolha seu plano</h1>
     <p class="subtitle">Desbloqueie todo o potencial da sua produção musical</p>
