--- a/public/entrevista-final.html
+++ b/public/entrevista-final.html
@@ -12,9 +12,10 @@
       margin: 4rem auto;
       text-align: center;
       padding: 2rem 1.5rem;
-      background: rgba(10,10,25,0.8);
+      background: rgba(10,10,25,0.85);
+      border: 2px solid #9333ea;
       border-radius: 16px;
-      box-shadow: 0 0 20px rgba(147, 51, 234, 0.4);
+      box-shadow: 0 0 30px rgba(147, 51, 234, 0.6);
     }
     .btn-group {
       display: flex;
