Limit signups per device and improve visuals

--- a/public/planos.html
+++ b/public/planos.html
@@ -6,6 +6,7 @@
   <title>Planos – Prod.AI</title>
   <!-- Fonte Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
   <style>
     /* RESET */
     *, *::before, *::after { margin:0; padding:0; box-sizing:border-box; }
@@ -30,7 +31,6 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: radial-gradient(circle at top left, var(--bg-body-start), var(--bg-body-end));
       color: var(--text-light);
       min-height: 100vh;
       display: flex;
@@ -208,6 +208,7 @@
   </style>
 </head>
 <body>
+  <div class="particles"></div>
   <div class="container">
     <h1>Escolha seu plano</h1>
     <p class="subtitle">Desbloqueie todo o potencial da sua produção musical</p>
