Adiciona estilo gradiente ao título

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Prod.AI - Mentor Virtual</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;800&display=swap" rel="stylesheet">
 
   <style>
     body.loading {
@@ -37,7 +38,7 @@
     <!-- TELA INICIAL -->
     <div class="start-screen" id="startScreen">
       <div class="start-header" id="startHeader">
-        <h1 class="logo" id="mainLogo">Prod.AI</h1>
+        <h1 class="logo-gradiente" id="mainLogo">Prod.AI</h1>
         <p class="subtitle" id="mainSubtitle">Seu mentor virtual inteligente</p>
         <p class="motivational-text" id="motivationalText">
           <span class="motivational-line-2">Estou aqui para resolver qualquer problema sobre Produção Musical!</span>
@@ -59,7 +60,7 @@
 
     <!-- HEADER APÓS ANIMAÇÃO -->
     <header class="header" id="mainHeader" style="display: none;">
-      <h1 class="logo">Prod.AI</h1>
+      <h1 class="logo-gradiente">Prod.AI</h1>
       <p class="subtitle">Seu mentor virtual inteligente</p>
     </header>
 
