--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Login</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;800&display=swap" rel="stylesheet">
   
   <style>
     .container {
@@ -94,7 +95,7 @@
   <div class="particles"></div>
 
   <div class="container fade-in">
-    <h1 class="logo">Prod.AI</h1>
+    <h1 class="logo-gradiente">Prod.AI</h1>
     <p class="subtitle">Acesse sua conta</p>
 
     <div id="error-message" class="error-message"></div>
