Update logo gradient styling

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <!-- TELA INICIAL -->
     <div class="start-screen" id="startScreen">
       <div class="start-header" id="startHeader">
-        <h1 class="logo-gradiente" id="mainLogo">Prod.AI</h1>
+        <h1 class="logo-gradiente" id="mainLogo">PROD.AI</h1>
         <p class="subtitle" id="mainSubtitle">Seu mentor virtual inteligente</p>
         <p class="motivational-text" id="motivationalText">
           <span class="motivational-line-2">Estou aqui para resolver qualquer problema sobre Produção Musical!</span>
@@ -60,7 +60,7 @@
 
     <!-- HEADER APÓS ANIMAÇÃO -->
     <header class="header" id="mainHeader" style="display: none;">
-      <h1 class="logo-gradiente">Prod.AI</h1>
+      <h1 class="logo-gradiente">PROD.AI</h1>
       <p class="subtitle">Seu mentor virtual inteligente</p>
     </header>
 
