--- a/public/login.html
+++ b/public/login.html
@@ -95,7 +95,7 @@
   <div class="particles"></div>
 
   <div class="container fade-in">
-    <h1 class="logo-gradiente">Prod.AI</h1>
+    <h1 class="logo-gradiente">PROD.AI</h1>
     <p class="subtitle">Acesse sua conta</p>
 
     <div id="error-message" class="error-message"></div>
