--- a/public/login.html
+++ b/public/login.html
@@ -44,26 +44,50 @@
       flex-wrap: wrap;
     }
     .btn-plus {
-      background: linear-gradient(to right, #9a00ff, #5f00ff);
-      color: #ffffff;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-weight: bold;
-      text-decoration: none;
-      box-shadow: 0 0 10px rgba(159, 0, 255, 0.6);
-      transition: transform 0.2s, box-shadow 0.2s;
-      border: none;
-      min-width: 140px;
+      display: inline-block;
+      padding: 0.9rem 2rem;
       font-size: 1rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+      text-decoration: none;
+      color: #ffffff;
+      background: linear-gradient(135deg, rgba(147, 51, 234, 0.15), rgba(147, 51, 234, 0.35));
+      border: 2px solid #9333ea;
+      border-radius: 50px;
+      position: relative;
+      overflow: hidden;
+      transition: all 0.3s ease;
+      transform-style: preserve-3d;
+      animation: fade-in 1s ease-out 0.5s both;
+      min-width: 140px;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-bottom: 0;
     }
+    .btn-plus::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, #c084fc, transparent);
+      transition: left 0.5s ease;
+    }
     .btn-plus:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(159, 0, 255, 0.8);
+      transform: translateY(-5px) rotateX(-10deg);
+      box-shadow: 0 10px 30px rgba(147, 51, 234, 0.5), inset 0 0 20px rgba(147, 51, 234, 0.2);
+      border-color: #d946ef;
+      text-shadow: 0 0 10px #c084fc;
+    }
+    .btn-plus:hover::before {
+      left: 100%;
+    }
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
     .error-message {
       background: rgba(255,0,0,0.2);
