Harmoniza cor dos botões do login

--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,8 @@
       letter-spacing: 1px;
       text-decoration: none;
       color: #ffffff;
-      background: linear-gradient(135deg, rgba(147, 51, 234, 0.15), rgba(147, 51, 234, 0.35));
-      border: 2px solid #9333ea;
+      background: linear-gradient(135deg, #00fff7, #d946ef);
+      border: 2px solid #d946ef;
       border-radius: 50px;
       position: relative;
       overflow: hidden;
@@ -73,14 +73,14 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, #c084fc, transparent);
+      background: linear-gradient(90deg, transparent, #00fff7, transparent);
       transition: left 0.5s ease;
     }
     .btn-plus:hover {
       transform: translateY(-5px) rotateX(-10deg);
-      box-shadow: 0 10px 30px rgba(147, 51, 234, 0.5), inset 0 0 20px rgba(147, 51, 234, 0.2);
-      border-color: #d946ef;
-      text-shadow: 0 0 10px #c084fc;
+      box-shadow: 0 10px 30px rgba(0, 255, 247, 0.5), inset 0 0 20px rgba(217, 70, 239, 0.2);
+      border-color: #00fff7;
+      text-shadow: 0 0 10px #d946ef;
     }
     .btn-plus:hover::before {
       left: 100%;
