--- a/public/login.html
+++ b/public/login.html
@@ -51,7 +51,7 @@
       letter-spacing: 1px;
       text-decoration: none;
       color: #ffffff;
-      background: linear-gradient(135deg, #00fff7, #d946ef);
+      background: linear-gradient(135deg, rgba(217,70,239,0.1), rgba(147,51,234,0.1));
       border: 2px solid #d946ef;
       border-radius: 50px;
       position: relative;
@@ -73,13 +73,13 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, #00fff7, transparent);
+      background: linear-gradient(90deg, transparent, rgba(217,70,239,0.5), transparent);
       transition: left 0.5s ease;
     }
     .btn-plus:hover {
       transform: translateY(-5px) rotateX(-10deg);
-      box-shadow: 0 10px 30px rgba(0, 255, 247, 0.5), inset 0 0 20px rgba(217, 70, 239, 0.2);
-      border-color: #00fff7;
+      box-shadow: 0 10px 30px rgba(217, 70, 239, 0.5), inset 0 0 20px rgba(217, 70, 239, 0.2);
+      border-color: #d946ef;
       text-shadow: 0 0 10px #d946ef;
     }
     .btn-plus:hover::before {
