--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,8 @@
       letter-spacing: 1px;
       text-decoration: none;
       color: #ffffff;
-      background: linear-gradient(135deg, rgba(217,70,239,0.1), rgba(147,51,234,0.1)) padding-box,
-                  linear-gradient(135deg, #00fff7, #d946ef) border-box;
+      background: linear-gradient(135deg, rgba(0,188,212,0.15), rgba(142,36,170,0.15)) padding-box,
+                  linear-gradient(135deg, #00bcd4, #8e24aa) border-box;
       border: 2px solid transparent;
       border-radius: 50px;
       position: relative;
@@ -76,14 +76,14 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(217,70,239,0.5), transparent);
+      background: linear-gradient(90deg, transparent, rgba(142,36,170,0.5), transparent);
       transition: left 0.5s ease;
     }
     .btn-plus:hover {
       transform: translateY(-5px) rotateX(-10deg);
-      box-shadow: 0 10px 30px rgba(217, 70, 239, 0.5), inset 0 0 20px rgba(217, 70, 239, 0.2);
-      border-color: #d946ef;
-      text-shadow: 0 0 10px #d946ef;
+      box-shadow: 0 10px 30px rgba(142, 36, 170, 0.5), inset 0 0 20px rgba(142, 36, 170, 0.2);
+      border-color: #8e24aa;
+      text-shadow: 0 0 10px #8e24aa;
     }
     .btn-plus:hover::before {
       left: 100%;
