Ajusta degradê do logo e botões do login

--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,8 @@
       letter-spacing: 1px;
       text-decoration: none;
       color: #ffffff;
-      background: linear-gradient(135deg, rgba(0,188,212,0.15), rgba(142,36,170,0.15)) padding-box,
-                  linear-gradient(135deg, #00bcd4, #8e24aa) border-box;
+      background: linear-gradient(180deg, rgba(10,0,0,0.15), rgba(139,46,255,0.15)) padding-box,
+                  linear-gradient(180deg, #0a0000, #8b2eff) border-box;
       border: 2px solid transparent;
       border-radius: 50px;
       position: relative;
