Reverte cores do logo e botoes

--- a/public/login.html
+++ b/public/login.html
@@ -51,8 +51,8 @@
       letter-spacing: 1px;
       text-decoration: none;
       color: #ffffff;
-      background: linear-gradient(180deg, rgba(10,0,0,0.15), rgba(139,46,255,0.15)) padding-box,
-                  linear-gradient(180deg, #0a0000, #8b2eff) border-box;
+      background: linear-gradient(180deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15)) padding-box,
+                  linear-gradient(180deg, #00ffff, #ff00ff) border-box;
       border: 2px solid transparent;
       border-radius: 50px;
       position: relative;
@@ -76,14 +76,14 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(142,36,170,0.5), transparent);
+      background: linear-gradient(90deg, transparent, #00ffff, transparent);
       transition: left 0.5s ease;
     }
     .btn-plus:hover {
       transform: translateY(-5px) rotateX(-10deg);
-      box-shadow: 0 10px 30px rgba(142, 36, 170, 0.5), inset 0 0 20px rgba(142, 36, 170, 0.2);
-      border-color: #8e24aa;
-      text-shadow: 0 0 10px #8e24aa;
+      box-shadow: 0 10px 30px rgba(0, 255, 255, 0.5), inset 0 0 20px rgba(0, 255, 255, 0.2);
+      border-color: #ff00ff;
+      text-shadow: 0 0 10px #00ffff;
     }
     .btn-plus:hover::before {
       left: 100%;
