--- a/public/login.html
+++ b/public/login.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prod.AI – Login</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet" />
   
   <style>
+    body { font-family: 'Rajdhani', sans-serif; }
     .container {
       max-width: 400px;
       padding: 2rem;
@@ -43,12 +44,12 @@
       margin-top: 1rem;
       flex-wrap: wrap;
     }
-    .btn-plus {
+    .cta-button {
       display: inline-block;
-      padding: 0.9rem 2rem;
-      font-size: 1rem;
+      padding: 1.1rem 3rem;
+      font-size: 1.1rem;
       font-weight: 700;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
       text-decoration: none;
       color: #ffffff;
       background: linear-gradient(180deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15)) padding-box,
@@ -69,7 +70,7 @@
       background-origin: border-box;
       background-clip: padding-box, border-box;
     }
-    .btn-plus::before {
+    .cta-button::before {
       content: '';
       position: absolute;
       top: 0;
@@ -79,13 +80,13 @@
       background: linear-gradient(90deg, transparent, #00ffff, transparent);
       transition: left 0.5s ease;
     }
-    .btn-plus:hover {
+    .cta-button:hover {
       transform: translateY(-5px) rotateX(-10deg);
       box-shadow: 0 10px 30px rgba(0, 255, 255, 0.5), inset 0 0 20px rgba(0, 255, 255, 0.2);
       border-color: #ff00ff;
       text-shadow: 0 0 10px #00ffff;
     }
-    .btn-plus:hover::before {
+    .cta-button:hover::before {
       left: 100%;
     }
     @keyframes fade-in {
@@ -140,8 +141,8 @@
     <div id="recaptcha-container"></div>
 
     <div class="button-group">
-      <button class="btn-plus" id="loginBtn">Entrar</button>
-      <button class="btn-plus" id="signUpBtn">Cadastrar</button>
+      <button class="cta-button" id="loginBtn">Entrar</button>
+      <button class="cta-button" id="signUpBtn">Cadastrar</button>
     </div>
 
     <div style="text-align:center; margin-top: 14px; margin-bottom: 4px;">
@@ -158,7 +159,7 @@
   </div>
 
   <div style="display: flex; justify-content: center; margin-top: 1rem;">
-  <button class="btn-plus" id="confirmCodeBtn">Confirmar código</button>
+  <button class="cta-button" id="confirmCodeBtn">Confirmar código</button>
 </div>
 
 
