Enhance entrevista pages with futuristic styling

--- a/public/entrevista-final.html
+++ b/public/entrevista-final.html
@@ -11,7 +11,7 @@
   <div class="particles"></div>
   <div class="final-container fade-in">
     <h1 class="logo" style="margin-bottom:1rem;">Perfil técnico concluído!</h1>
-    <p class="subtitle" style="margin-bottom:2rem;">Obrigado por responder! Agora o Prod.AI está pronto para oferecer respostas personalizadas para sua jornada musical.</p>
+    <p class="subtitle final-message" style="margin-bottom:2rem;">Obrigado por responder! Agora o Prod.AI está pronto para oferecer respostas personalizadas para sua jornada musical.</p>
     <p style="margin-bottom:1rem; color:#9333ea; font-weight:600; font-size:1.1rem;">Utilize a versão Plus:</p>
     <ul style="text-align:left; margin:0 auto; max-width:320px; color:#9333ea;">
       <li>Respostas adaptadas ao seu perfil</li>
