Revert interview page tweaks

--- a/public/entrevista-final.html
+++ b/public/entrevista-final.html
@@ -29,12 +29,11 @@
   <div class="final-container fade-in">
     <h1 class="logo" style="margin-bottom:0.5rem;">Perfil técnico concluído!</h1>
     <p class="subtitle" style="margin-bottom:1.5rem;">Quer respostas personalizadas para o seu nível, estilo e DAW?</p>
-    <p style="margin-bottom:1rem; color:#9333ea; font-weight:600; font-size:1.1rem;">Utilize a versão Plus:</p>
-    <ul style="text-align:left; margin:0 auto; max-width:320px; color:#9333ea;">
+    <p style="margin-bottom:1rem;">Utilize a versão Plus:</p>
+    <ul style="text-align:left; margin:0 auto; max-width:320px;">
       <li>Respostas adaptadas ao seu perfil</li>
       <li>Mensagens ilimitadas</li>
-      <li>Respostas mais avançadas</li>
-      <li>Prioridade no servidor</li>
+      <li>Continuar utilizando o site gratuitamente</li>
     </ul>
     <div class="btn-group">
       <a href="planos.html" class="btn-plus" id="assinarBtn">Assinar o Plano Plus</a>
