--- a/public/login.html
+++ b/public/login.html
@@ -97,7 +97,8 @@
     }
 
     .container {
-      max-width: 400px;
+      max-width: 600px;
+      width: 100%;
       padding: 2rem;
       margin: 4rem auto;
       text-align: center;
