fix: ensure mobile login has purple gradient

--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
     body {
       background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%);
       font-family: 'Space Grotesk', sans-serif;
+      min-height: 100vh;
     }
 
     body::before {
