Replace Plus subscription button with account management

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     <footer class="footer" id="mainFooter" style="display: none;">
       <div class="footer-content-grid">
         <div class="footer-left">
-          <a href="planos.html" class="btn-plus">Assinar versão Plus</a>
+          <a href="gerenciar.html"><button class="btn-plus">Gerenciar minha conta</button></a>
         </div>
         <div class="footer-center">
           <p class="instagram-text" id="footerCenterText">
