Replace Plus subscription button with account management

--- a/public/index.html
+++ b/public/index.html
@@ -94,10 +94,12 @@
     <footer class="footer" id="mainFooter" style="display: none;">
       <div class="footer-content-grid">
         <div class="footer-left">
-          <a href="planos.html" class="btn-plus">Assinar versão Plus</a>
+          <a href="gerenciar.html"><button class="btn-plus">Gerenciar minha conta</button></a>
         </div>
         <div class="footer-center">
-          <p class="instagram-text">Siga no Instagram: <a href="https://instagram.com/djcorreaoriginal" target="_blank">@djcorreaoriginal</a></p>
+          <p class="instagram-text" id="footerCenterText">
+            Siga no Instagram: <a href="https://instagram.com/djcorreaoriginal" target="_blank">@djcorreaoriginal</a>
+          </p>
         </div>
         <div class="footer-right">
           <button class="btn-logout" id="logoutBtn">Sair</button>
