--- a/public/login.html
+++ b/public/login.html
@@ -8,8 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <style>
+    /* Ajuste: garantir gradient roxo escuro em todas as telas */
     body {
-      background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%);
+      /* Fallback para navegadores sem suporte a gradient */
+      background-color: #0f0f23;
+      background-image: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%);
       font-family: 'Space Grotesk', sans-serif;
     }
 
@@ -69,9 +72,10 @@
       background: rgba(10, 10, 25, 0.8);
       border: 2px solid rgba(147, 51, 234, 0.3);
       border-radius: 16px;
-      padding: 1.2rem 1.5rem;
+      padding: 1.4rem 1.6rem;
       color: #fff;
       backdrop-filter: blur(10px);
+      width: 100%;
     }
 
     .input-group input:focus {
@@ -85,7 +89,7 @@
     .btn-plus {
       background: linear-gradient(135deg, #9a00ff, #5f00ff);
       border-radius: 16px;
-      padding: 1rem 2rem;
+      padding: 0.75rem 1.5rem;
       box-shadow: 0 8px 25px rgba(159, 0, 255, 0.3);
       position: relative;
       overflow: hidden;
@@ -97,7 +101,8 @@
     }
 
     .container {
-      max-width: 400px;
+      max-width: 500px;
+      width: 100%;
       padding: 2rem;
       margin: 4rem auto;
       text-align: center;
